// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkeletonLocationCard component should render correctly 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 hover:shadow-md rounded-b-sm overflow-hidden w-full h-full p-0"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
      data-slot="card-header"
      style="height: 340px;"
    >
      <div
        class="bg-accent animate-pulse overflow-hidden w-full"
        data-slot="skeleton"
        style="height: 340px;"
      />
    </div>
    <div
      class="px-7.5 pt-4 pb-6"
      data-slot="card-content"
    >
      <div
        class="bg-accent animate-pulse overflow-hidden w-full h-7"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse overflow-hidden w-full h-6 mt-3"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse overflow-hidden w-full h-6 mt-4"
        data-slot="skeleton"
      />
    </div>
  </div>
</div>
`;

exports[`SkeletonLocationCard component should render with custom height for image  1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 hover:shadow-md rounded-b-sm overflow-hidden w-full h-full p-0"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
      data-slot="card-header"
      style="height: 300px;"
    >
      <div
        class="bg-accent animate-pulse overflow-hidden w-full"
        data-slot="skeleton"
        style="height: 300px;"
      />
    </div>
    <div
      class="px-7.5 pt-4 pb-6"
      data-slot="card-content"
    >
      <div
        class="bg-accent animate-pulse overflow-hidden w-full h-7"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse overflow-hidden w-full h-6 mt-3"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse overflow-hidden w-full h-6 mt-4"
        data-slot="skeleton"
      />
    </div>
  </div>
</div>
`;
